force-app/main/default/objects/Provider_Relations_Mass_Email__c/Provider_Relations_Mass_Email__c.object-meta.xml
<CustomObject>
    <label>Provider Relations Mass Email</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Provider Relations Mass Email #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Relations Mass Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>