force-app/main/default/objects/Provider_Relations_Mass_Email__c/fields/Attachment_Names__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Names__c</fullName>
    <description>Names of all attachments sent with the Provider Email.</description>
    <label>Attachment Names</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>