force-app/main/default/objects/Provider_Relations_Mass_Email__c/fields/Message_Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Plain_Text__c</fullName>
    <label>Message Plain Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>