force-app/main/default/objects/Provider_Relations_Mass_Email__c/fields/Message_Rich_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Rich_Text__c</fullName>
    <label>Message Rich Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>